feature/Style - updated color pallet, updated some styling, removed App.css as I was not using it

--- a/src/Receipt/Receipt.css
+++ b/src/Receipt/Receipt.css
@@ -1,7 +1,8 @@
 .receiptCard {
+  background-color: aliceblue;
   border: solid 1px black;
   border-radius: 5px;
   margin: 5px;
-  padding-left: 7px;
+  text-align: center;
   width: 11%;
 }
