--- a/src/CurrentGoods/CurrentGoods.css
+++ b/src/CurrentGoods/CurrentGoods.css
@@ -2,16 +2,20 @@
   display: flex;
 }
 
-.noGoodsMessage {
-  
-}
-
 table,
 td {
   border: solid 1px black;
+  border-radius: 5px;
+  padding: 2px;
+}
+
+td {
+  background-color: white;
+  margin-right: 2px;
 }
 
 table {
+  background-color: aliceblue;
   width: 40%;
 }
 
@@ -28,8 +32,10 @@ thead {
 }
 
 .deleteBtnHolder {
-  width: 33%;
+  background-color: aliceblue;
+  border: none;
   text-align: center;
+  width: 33%;
 }
 
 .deleteBtn {
@@ -38,21 +44,21 @@ thead {
   border-radius: 5px;
   color: #eef0eb;
   cursor: pointer;
-  height: 2.05em;
   font-size: 0.8em;
   font-weight: 600;
+  height: 2.05em;
 }
 
 .checkOutBtn {
   border: 1px solid #364156;
   border-radius: 5px;
   color: #eef0eb;
-  cursor: pointer;
-  height: 2.05em;
   font-size: 0.8em;
   font-weight: 600;
+  height: 2.4em;
   margin-left: 100px;
   margin-top: 11px;
+  width: 92px;
 }
 
 .buttonDisabled {
