--- a/src/Form/Form.css
+++ b/src/Form/Form.css
@@ -1,5 +1,7 @@
 .form {
-  border: solid 1px black;
+  border: solid 1px #140D1D;
+  background-color: aliceblue;
+  border-radius: 5px;
   padding: 5px;
   width: 99%;
 }
